from pydantic import BaseModel
from typing import Optional
from datetime import datetime


class Inventory(BaseModel):
    """
    Description:

    This class represents the Inventory table in the database.

    Use cases:

    - Validate the data of a new Inventory object

    - Validate the data of a Inventory object to be updated

    Notes:

    - The id field is not included in the base model because it is generated by

    the database

    """

    stock: Optional[float] = None
    cost_per_unit: Optional[float] = None
    eng_units: Optional[str] = None
    created_at: Optional[datetime] = None
    updated_at: Optional[datetime] = None
